--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@ body {
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
   background-size: auto 100%;
 }
+.gradient-bg-welcome-nav {
+  background-color: #413d3d;
+  background-image: 
+    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
+    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
+    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 70%);
+  background-size: auto;
+}
 
 .gradient-bg-services {
   background-color:#0f0e13;
