--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:ital,wght@0,200;0,600;1,200&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:ital,wght@0,200;0,600;1,200&family=Roboto:ital,wght@0,400;0,500;1,700&family=Source+Sans+Pro&display=swap');
 * html {
   padding: 0;
   margin: 0;
@@ -8,7 +9,12 @@
 
 body {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
+	/* font-family: "system-ui"; */
+	font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -108,6 +114,15 @@ color: white;
 position: absolute;
 bottom: 0px;
 }
+.bottom-right {
+position: absolute;
+bottom: 0px;
+right: 0px;
+}
+.center{
+	position: absolute;
+	margin: auto;
+}
 .sction{
   position: relative;
   width:100%;
@@ -155,152 +170,189 @@ bottom: 0px;
 
 /*Gallery css*/
 
-		body{
-			margin: 0;
-			padding: 0;background-color:#0f0e13;
-			background-image: 
-				radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-				radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-				radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
-			background-attachment: fixed;
-			font-family: sans-serif;
-			min-height: 100vh;
-		}
-		.img-gallery{
-			max-width: 1280px;
-			margin: 0 auto;
-			width: 100%;
-		}
-		.img-gallery h2{
-			font-weight: 800;
-			font-size: 30px;
-			z-index: 1;
-			position: relative;
-			color: #dadada;
-			margin-left: 20px;
+body{
+	margin: 0;
+	padding: 0;background-color:#0f0e13;
+	background-image: 
+		radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
+		radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
+		radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+	background-attachment: fixed;
+	font-family: sans-serif;
+	min-height: 100vh;
+}
+.img-gallery{
+	max-width: 1280px;
+	margin: 0 auto;
+	width: 100%;
+}
+.img-gallery h2{
+	font-weight: 800;
+	font-size: 30px;
+	z-index: 1;
+	position: relative;
+	color: #dadada;
+	margin-left: 20px;
 
-		}
-		.img-gallery h2 span{
-			font-size: 25px;
-			line-height: 30px;
-			font-weight: 600;
-			opacity: 0.5;
-			color: #999;
-		}
-		.img-gallery .gallery{
-			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-			grid-template-rows: minmax(100px, 1fr);
-			grid-auto-flow: dense;
-			grid-gap: 10px;
-			padding: 10px;
-			box-sizing: border-box;
-		}
-		.img-gallery .gallery div{
-			--transform: translate(var(--img-left), var(--img-top) ) scale(0.5); /*img-left and img-top variables are declared by javascript*/
-			position: relative;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			transform: var(--transform); /*taking value from variable*/
-		}
-		.img-gallery .gallery.activate div{
-			transition: 1s;
-		}
-		.img-gallery .gallery div.wide{
-			grid-column: span 2;
-		}
-		.img-gallery .gallery div.tall{
-			grid-row: span 2;
-		}
-		.img-gallery .gallery img{
-			max-width: 100%;
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			vertical-align: middle;
-			display: inline-block;
-		}
-		.img-gallery+.img-gallery{
-			margin-top: 40px;
-		}
+}
+.img-gallery h2 span{
+	font-size: 25px;
+	line-height: 30px;
+	font-weight: 600;
+	opacity: 0.5;
+	color: #999;
+}
+.img-gallery .gallery{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 0.75fr));
+	grid-template-rows: repeat(auto-fit, minmax(150px, 0.25fr));
+	grid-auto-flow: dense;
+	grid-gap: 10px;
+	padding: 10px;
+	box-sizing: border-box;
+}
+.img-gallery .gallery div{
+	--transform: translate(var(--img-left), var(--img-top) ) scale(0.5); /*img-left and img-top variables are declared by javascript*/
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transform: var(--transform); /*taking value from variable*/
+}
+.img-gallery .gallery.activate div{
+	transition: 1s;
+}
+.img-gallery .gallery div.wide{
+	grid-column: span 2;
+}
+.img-gallery .gallery div.tall{
+	grid-row: span 2;
+}
+.img-gallery .gallery img{
+	max-width: 100%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	vertical-align: middle;
+	display: inline-block;
+}
+.img-gallery+.img-gallery{
+	margin-top: 40px;
+}
 
-		/*Slider code*/
-		#slider{
-			width: 100vw;
-			height: 100vh;
-			background: rgba(26,26,26,0.6);
-			position: fixed;
-			top: 100vh;
-			left: 0;
-			z-index: 10;
-			display: grid;
-			place-items: center;
-			backdrop-filter: blur(3px);
-			transition: 0.3s;
-			filter: blur(2px);
-			opacity: 0;
-		}
-		#slider.active{
-			opacity: 1;
-			filter: blur(0px);
-			top: 0;
-		}
-		#slider .image{
-			height: 90vh;
-			width: 90vw;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			position: relative;
-		}
-		#slider .image img{
-			width: 100%;
-			height: 100%;
-			object-fit: contain;
-		}
-		#slider .image h2.show{
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			background: #26262630;
-			height: 30px;
-			font-size: 25px;
-			text-align: center;
-			backdrop-filter: blur(3px);
-			color: #bfbfbf;
-			text-transform: capitalize;
-			transition: 0.2s ease-in;
-		}
-		#slider .image img:hover+ h2{
-			opacity: 0;
-		}
-		#slider .controls {
-			position: absolute;
-			top: calc(50% - 40px);
-			width: 100%;
-		}
-		#slider .controls > div{
-			cursor: pointer;
-			width: 40px;
-			height: 80px;
-			background: #262626;
-			position: absolute;
-			font-family: "fontAwesome";
-			line-height: 80px;
-			text-align: center;
-			color: #efefef;
-			font-size: 40px;
-		}
-		#slider .controls > div.disabled{
-			cursor: not-allowed;
-		}
-		#slider .controls .prev:before{
-			content: "\f0d9";
-		}
-		#slider .controls .next:before{
-			content: "\f0da";
-		}
-		#slider .controls .next{
-			right: 0;
-		}
+/*Slider code*/
+#slider{
+	width: 100vw;
+	height: 100vh;
+	background: rgba(26,26,26,0.6);
+	position: fixed;
+	top: 100vh;
+	left: 0;
+	z-index: 10;
+	display: grid;
+	place-items: center;
+	backdrop-filter: blur(3px);
+	transition: 0.3s;
+	filter: blur(2px);
+	opacity: 0;
+}
+#slider.active{
+	opacity: 1;
+	filter: blur(0px);
+	top: 0;
+}
+#slider .image{
+	height: 90vh;
+	width: 90vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+#slider .image img{
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+}
+#slider .image h2.show{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	background: #26262630;
+	height: 30px;
+	font-size: 25px;
+	text-align: center;
+	backdrop-filter: blur(3px);
+	color: #bfbfbf;
+	text-transform: capitalize;
+	transition: 0.2s ease-in;
+}
+#slider .image img:hover+ h2{
+	opacity: 0;
+}
+#slider .controls {
+	position: absolute;
+	top: calc(50% - 40px);
+	width: 100%;
+}
+#slider .controls > div{
+	cursor: pointer;
+	width: 40px;
+	height: 80px;
+	background: #262626;
+	position: absolute;
+	font-family: "fontAwesome";
+	line-height: 80px;
+	text-align: center;
+	color: #efefef;
+	font-size: 40px;
+}
+#slider .controls > div.disabled{
+	cursor: not-allowed;
+}
+#slider .controls .prev:before{
+	content: "\f0d9";
+}
+#slider .controls .next:before{
+	content: "\f0da";
+}
+#slider .controls .next{
+	right: 0;
+}
+@media screen and (max-width: 452px) {
+	.img-gallery .gallery{
+		grid-gap:5px;
+	}
+}
+
+/* EventsDetails css */
+
+#event_popup{
+	position: fixed;
+	top: 100vh;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background: #000000b8;
+	z-index: 100;
+	transition: 0.25s ease-in;
+}
+#event_popup.active{
+	top: 0;
+}
+#event_popup_detail{
+	width: 720px;
+	max-width: 90%;
+	height: 80vh;
+	margin: 10vh auto 0;
+	background-color: #000000b8;
+	border-radius: 10px;
+	overflow-y: scroll;
+}
+#event_popup_detail::-webkit-scrollbar{
+	display: none;
+	width: 0;
+}
+#event_popup_detail img{
+	object-fit: cover;
+}
