--- a/src/index.css
+++ b/src/index.css
@@ -27,34 +27,18 @@ body {
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
   background-size: auto 100%;
 }
-.gradient-bg-welcome-nav {
+/* .gradient-bg-welcome-nav {
   background-color: #413d3d;
   background-image: 
     radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
     radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 70%);
   background-size: auto;
-}
-
-.gradient-bg-services {
-  background-color:#0f0e13;
-  background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 100%, hsla(225,39%,25%,1) 0, transparent 50%);
-}
-
-.gradient-bg-transactions {
-  background-color: #0f0e13;
-  background-image: 
-    radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,25%,1) 0, transparent 50%);
-}
-
-.gradient-bg-footer {
-  background-color: #0f0e13;
-  background-image: 
-    radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
-    radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
+} */
+.overlay {
+  z-index: 11;
+  margin: 30px;
+  background: #009938;
 }
 
 .blue-glassmorphism {
@@ -85,18 +69,6 @@ body {
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-}
-
-.eth-card {
-  background-color:#a099ff;
-  background-image: 
-    radial-gradient(at 83% 67%, rgb(152, 231, 156) 0, transparent 58%), 
-    radial-gradient(at 67% 20%, hsla(357,94%,71%,1) 0, transparent 59%), 
-    radial-gradient(at 88% 35%, hsla(222,81%,65%,1) 0, transparent 50%), 
-    radial-gradient(at 31% 91%, hsla(9,61%,61%,1) 0, transparent 52%), 
-    radial-gradient(at 27% 71%, hsla(336,91%,65%,1) 0, transparent 49%), 
-    radial-gradient(at 74% 89%, hsla(30,98%,65%,1) 0, transparent 51%), 
-    radial-gradient(at 53% 75%, hsla(174,94%,68%,1) 0, transparent 45%);
 }
 
 .text-gradient {
@@ -356,3 +328,45 @@ body{
 #event_popup_detail img{
 	object-fit: cover;
 }
+
+/* about us */
+.about-us-container {
+	max-width:800px;
+	margin: 0 auto;
+	padding: 60px;
+	text-align: center;
+	font-family: Arial, sans-serif;
+	font-size: 20px;
+	color: white;
+  }
+  
+  .about-us-container h2 {
+	font-size: 48px;
+	margin-bottom: 30px;
+	color: whitesmoke;
+  }
+  
+  .about-us-container p {
+	line-height: 1.8;
+	margin-bottom: 30px;
+  }
+  
+  .donate-button-container {
+	margin-top: 60px;
+  }
+  
+  .donate-button {
+	display: inline-block;
+	padding: 18px 48px;
+	border-radius: 40px;
+	background-color: silver;
+	color: black;
+	text-decoration: none;
+	font-size: 22px;
+	font-weight: bold;
+	transition: background-color 0.2s;
+  }
+  
+  .donate-button:hover {
+	background-color: white;
+  }
